remove sun base64